update editor add modal

--- a/src/components/common/RichEditor/index.less
+++ b/src/components/common/RichEditor/index.less
@@ -2,8 +2,12 @@
   width:60%;
 }
 .myeditor-editor{
-  height: 275px !important;
+  min-height: 175px !important;
   border: 1px solid #F1F1F1 !important;
   padding: 5px !important;
   border-radius: 2px !important;
+	box-shadow: inset 2px 2px 5px #ccc;
+	.DraftEditor-root{
+		margin-top:-10px;
+	}
 }
