--- a/src/assets/style/app.less
+++ b/src/assets/style/app.less
@@ -13,6 +13,32 @@ h1,h2,h3,h4,h5{
 .primary-color{
 	color: @primayColor;
 }
+
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
+::-webkit-scrollbar
+{
+    width: 8px;
+    height: 8px;
+    background-color: #eee;
+}
+
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+    border-radius: 8px;
+    background-color: #F5F5F5;
+}
+
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb
+{
+    border-radius: 8px;
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.3);
+    background-color: #ccc;
+}
+
+
 #root{
 	height: 100%;
 }
@@ -371,4 +397,19 @@ h1,h2,h3,h4,h5{
 	/* autoprefixer: on*/
 	-webkit-line-clamp: 3;
 	overflow: hidden;
+}
+
+.modal-editor-content{
+	padding-right: 10px;
+	.modal-editor{
+		width:100%;
+	}
+}
+
+.edit-modal-box{
+	.ant-row:not(:last-child) .ant-form-item-control-wrapper{
+		width: 300px;
+
+	}
+
 }
